# euler

./: .gitignore  README.md  answers.json  problems.xml  rosalind_cons.txt  rosalind_prot.txt  rosalind_rna.txt  rosalind_subs.txt
R/: runtests.R  runtests.bat  runtests.sh
R/tests/: tests.R
benchmarks/: results.csv
benchmarks/problem12/: README.md  measure.sh  measure_stdout.txt  results.csv
cpp/: CMakeLists.txt
cpp-rosalind/: .gitignore  CMakeCache.txt  common.hpp  compile_commands.json  cons.cpp  cons.hpp  cpp-rosalind.kdev4  cpprosalind  dna.cpp  dna.hpp  fib.cpp  fib.hpp  iprb.cpp  iprb.hpp  prot.cpp  revc.cpp  rna.hpp  string_util.hpp  subs.hpp
cpp/include/: problems.h
cpp/src/: problems.cxx
cpp/test/: testproblems.cxx
cs/: EulerCSharp.sln
d/: problems.d  tests.d
euler/: answers.json
fs/: EulerFSharp.sln
fsharp/: .gitignore  build.fsx  fsharp on Linux in 2017-05  fsharp.sln  paket.dependencies
hs/: .gitignore
julia-rosalind/: problem01.jl
kotlin-rosalind/: build.gradle.kts  settings.gradle.kts
kt/: .gitignore  build.gradle
nim/: problems.nim
ocaml/: run_tests.sh
py/: Problem02.py  Problem04.py  Problem12.py  Problem24.py  Problem25.py  Problem32.py  Problem8.py
py-rosalind/: .gitignore  fib.py  iprb.py  main.py  problem01.py  prot.py  rna.py  util.py
rosalind/: rosalind_dna.txt  rosalind_gc.txt  rosalind_hamm.txt  rosalind_revc.txt
rosalind/cpp-rosalind/: CMakeLists.txt  cmake_install.cmake  common.cpp  gc.cpp  gc.hpp  hamm.cpp  hamm.hpp  main.cpp  prot.hpp  revc.hpp  rna.cpp  subs.cpp
rust-rosalind/: Cargo.toml
scala/: .gitignore
ts-rosalind/: package-lock.json  tsconfig.json  tslint.json
(+325 files in other folders)
